change layer name

--- a/Model8.ipynb
+++ b/Model8.ipynb
@@ -323,35 +323,35 @@
     }
    ],
    "source": [
-    "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
+    "p_input = Input(shape=(50, ), dtype='int32', name='Input_postText')\n",
     "t_input = Input(shape=(10, ), dtype='int32', name='Input_tag')\n",
-    "u_input = Input(shape=(1,), name='input_id')\n",
-    "i_input = Input(shape=(1,), name='input_image')\n",
-    "d_input = Input(shape=(2,), name='input_postdate')\n",
+    "u_input = Input(shape=(1,), name='Input_id')\n",
+    "i_input = Input(shape=(1,), name='Input_image')\n",
+    "d_input = Input(shape=(2,), name='Input_postdate')\n",
     "\n",
     "#テキストとタグの学習\n",
-    "x = concatenate([p_input, t_input])\n",
-    "em = Embedding(input_dim=20000, output_dim=60, input_length=60)(x)\n",
-    "d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32)(d_em)\n",
-    "d_lstm_out = Dropout(0.5)(lstm_out)\n",
+    "x = concatenate([p_input, t_input], name='merge1')\n",
+    "em = Embedding(input_dim=20000, output_dim=60, input_length=60, name='Embedding')(x)\n",
+    "#d_em = Dropout(0.5)(em)\n",
+    "lstm_out = LSTM(32, name='LSTM')(em)\n",
+    "#d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "\n",
     "#3つ目のデータ学習\n",
     "user = Dense(16, activation='relu', name='user_dence')(u_input)\n",
-    "d_user = Dropout(0.5)(user)\n",
+    "#d_user = Dropout(0.5)(user)\n",
     "\n",
     "#4つ目のデータ学習\n",
     "image = Dense(16, activation='relu', name='image_dence')(i_input)\n",
-    "d_image = Dropout(0.5)(image)\n",
+    "#d_image = Dropout(0.5)(image)\n",
     "\n",
     "#5つ目のデータ学習\n",
     "pdate = Dense(16, activation='relu', name='pdate_dence')(d_input)\n",
-    "d_pdate = Dropout(0.5)(pdate)\n",
+    "#d_pdate = Dropout(0.5)(pdate)\n",
     "\n",
-    "x2 = concatenate([d_lstm_out, d_user, d_image, d_pdate])\n",
+    "x2 = concatenate([lstm_out, user, image, pdate], name='merge2')\n",
     "m2 = Dense(16, activation='relu', name = 'dence')(x2)\n",
-    "d_m2 = Dropout(0.5)(m2)\n",
-    "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
+    "#d_m2 = Dropout(0.5)(m2)\n",
+    "output = Dense(2, activation='softmax', name = 'output')(m2)\n",
     "\n",
     "model = Model(inputs=[p_input, t_input, u_input, i_input, d_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
