--- a/Model7.ipynb
+++ b/Model7.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -292,23 +292,33 @@
       "__________________________________________________________________________________________________\n",
       "Embedding (Embedding)           (None, 60, 60)       1200000     merge1[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
+      "dropout_1 (Dropout)             (None, 60, 60)       0           Embedding[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
       "Input_other1 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
       "Input_other2 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "LSTM (LSTM)                     (None, 32)           11904       Embedding[0][0]                  \n",
+      "LSTM (LSTM)                     (None, 32)           11904       dropout_1[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
       "dence1 (Dense)                  (None, 16)           32          Input_other1[0][0]               \n",
       "__________________________________________________________________________________________________\n",
       "dence2 (Dense)                  (None, 16)           32          Input_other2[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "merge2 (Concatenate)            (None, 64)           0           LSTM[0][0]                       \n",
-      "                                                                 dence1[0][0]                     \n",
-      "                                                                 dence2[0][0]                     \n",
+      "dropout_2 (Dropout)             (None, 32)           0           LSTM[0][0]                       \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_3 (Dropout)             (None, 16)           0           dence1[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_4 (Dropout)             (None, 16)           0           dence2[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "merge2 (Concatenate)            (None, 64)           0           dropout_2[0][0]                  \n",
+      "                                                                 dropout_3[0][0]                  \n",
+      "                                                                 dropout_4[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
       "dence (Dense)                   (None, 16)           1040        merge2[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            34          dence[0][0]                      \n",
+      "dropout_5 (Dropout)             (None, 16)           0           dence[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "output (Dense)                  (None, 2)            34          dropout_5[0][0]                  \n",
       "==================================================================================================\n",
       "Total params: 1,213,042\n",
       "Trainable params: 1,213,042\n",
@@ -326,27 +336,27 @@
     "#テキストとタグの学習\n",
     "x = concatenate([p_input, t_input], name='merge1')\n",
     "em = Embedding(input_dim=20000, output_dim=60, input_length=60, name='Embedding')(x)\n",
-    "#d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32, name='LSTM')(em)\n",
-    "#d_lstm_out = Dropout(0.5)(lstm_out)\n",
+    "d_em = Dropout(0.5)(em)\n",
+    "lstm_out = LSTM(32, name='LSTM')(d_em)\n",
+    "d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "\n",
     "#3つ目のデータ学習\n",
     "i3 = Dense(16, activation='relu', name='dence1')(o1_input)\n",
-    "#d_i3 = Dropout(0.5)(i3)\n",
+    "d_i3 = Dropout(0.5)(i3)\n",
     "\n",
     "#4つ目のデータ学習\n",
     "i4 = Dense(16, activation='relu', name='dence2')(o2_input)\n",
-    "#d_i4 = Dropout(0.5)(i4)\n",
+    "d_i4 = Dropout(0.5)(i4)\n",
     "\n",
-    "x2 = concatenate([lstm_out, i3, i4], name='merge2')\n",
+    "x2 = concatenate([d_lstm_out, d_i3, d_i4], name='merge2')\n",
     "m2 = Dense(16, activation='relu', name = 'dence')(x2)\n",
-    "#d_m2 = Dropout(0.5)(m2)\n",
-    "output = Dense(2, activation='softmax', name = 'output')(m2)\n",
+    "d_m2 = Dropout(0.5)(m2)\n",
+    "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
     "\n",
     "model = Model(inputs=[p_input, t_input, o1_input, o2_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
-    "plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model7.png')\n",
+    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model7.png')\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
    ]
