--- a/Model8.ipynb
+++ b/Model8.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -283,37 +283,49 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_postText (InputLayer)     (None, 50)           0                                            \n",
+      "Input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
       "Input_tag (InputLayer)          (None, 10)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_9 (Concatenate)     (None, 60)           0           input_postText[0][0]             \n",
+      "merge1 (Concatenate)            (None, 60)           0           Input_postText[0][0]             \n",
       "                                                                 Input_tag[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_5 (Embedding)         (None, 60, 60)       1200000     concatenate_9[0][0]              \n",
+      "Embedding (Embedding)           (None, 60, 60)       1200000     merge1[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "input_id (InputLayer)           (None, 1)            0                                            \n",
+      "dropout_1 (Dropout)             (None, 60, 60)       0           Embedding[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "input_image (InputLayer)        (None, 1)            0                                            \n",
+      "Input_id (InputLayer)           (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "input_postdate (InputLayer)     (None, 2)            0                                            \n",
+      "Input_image (InputLayer)        (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_5 (LSTM)                   (None, 32)           11904       embedding_5[0][0]                \n",
+      "Input_postdate (InputLayer)     (None, 2)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "user_dence (Dense)              (None, 16)           32          input_id[0][0]                   \n",
+      "LSTM (LSTM)                     (None, 32)           11904       dropout_1[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "image_dence (Dense)             (None, 16)           32          input_image[0][0]                \n",
+      "user_dence (Dense)              (None, 16)           32          Input_id[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "pdate_dence (Dense)             (None, 16)           48          input_postdate[0][0]             \n",
+      "image_dence (Dense)             (None, 16)           32          Input_image[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_10 (Concatenate)    (None, 80)           0           lstm_5[0][0]                     \n",
-      "                                                                 user_dence[0][0]                 \n",
-      "                                                                 image_dence[0][0]                \n",
-      "                                                                 pdate_dence[0][0]                \n",
+      "pdate_dence (Dense)             (None, 16)           48          Input_postdate[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 16)           1296        concatenate_10[0][0]             \n",
+      "dropout_2 (Dropout)             (None, 32)           0           LSTM[0][0]                       \n",
       "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            34          dence[0][0]                      \n",
+      "dropout_3 (Dropout)             (None, 16)           0           user_dence[0][0]                 \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_4 (Dropout)             (None, 16)           0           image_dence[0][0]                \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_5 (Dropout)             (None, 16)           0           pdate_dence[0][0]                \n",
+      "__________________________________________________________________________________________________\n",
+      "merge2 (Concatenate)            (None, 80)           0           dropout_2[0][0]                  \n",
+      "                                                                 dropout_3[0][0]                  \n",
+      "                                                                 dropout_4[0][0]                  \n",
+      "                                                                 dropout_5[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dence (Dense)                   (None, 16)           1296        merge2[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_6 (Dropout)             (None, 16)           0           dence[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "output (Dense)                  (None, 2)            34          dropout_6[0][0]                  \n",
       "==================================================================================================\n",
       "Total params: 1,213,346\n",
       "Trainable params: 1,213,346\n",
@@ -332,26 +344,26 @@
     "#テキストとタグの学習\n",
     "x = concatenate([p_input, t_input], name='merge1')\n",
     "em = Embedding(input_dim=20000, output_dim=60, input_length=60, name='Embedding')(x)\n",
-    "#d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32, name='LSTM')(em)\n",
-    "#d_lstm_out = Dropout(0.5)(lstm_out)\n",
+    "d_em = Dropout(0.5)(em)\n",
+    "lstm_out = LSTM(32, name='LSTM')(d_em)\n",
+    "d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "\n",
     "#3つ目のデータ学習\n",
     "user = Dense(16, activation='relu', name='user_dence')(u_input)\n",
-    "#d_user = Dropout(0.5)(user)\n",
+    "d_user = Dropout(0.5)(user)\n",
     "\n",
     "#4つ目のデータ学習\n",
     "image = Dense(16, activation='relu', name='image_dence')(i_input)\n",
-    "#d_image = Dropout(0.5)(image)\n",
+    "d_image = Dropout(0.5)(image)\n",
     "\n",
     "#5つ目のデータ学習\n",
     "pdate = Dense(16, activation='relu', name='pdate_dence')(d_input)\n",
-    "#d_pdate = Dropout(0.5)(pdate)\n",
+    "d_pdate = Dropout(0.5)(pdate)\n",
     "\n",
-    "x2 = concatenate([lstm_out, user, image, pdate], name='merge2')\n",
+    "x2 = concatenate([d_lstm_out, d_user, d_image, d_pdate], name='merge2')\n",
     "m2 = Dense(16, activation='relu', name = 'dence')(x2)\n",
-    "#d_m2 = Dropout(0.5)(m2)\n",
-    "output = Dense(2, activation='softmax', name = 'output')(m2)\n",
+    "d_m2 = Dropout(0.5)(m2)\n",
+    "output = Dense(2, activation='softmax', name = 'output')(d_m2)\n",
     "\n",
     "model = Model(inputs=[p_input, t_input, u_input, i_input, d_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
