--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.layers import Input, Dense, Embedding, LSTM, Dropout, concatenate\n",
     "from keras.models import Model\n",
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,11 +202,11 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_postText (InputLayer)  (None, 50)                0         \n",
+      "Input_postText (InputLayer)  (None, 50)                0         \n",
       "_________________________________________________________________\n",
-      "embedding_2 (Embedding)      (None, 50, 50)            1000000   \n",
+      "Embedding (Embedding)        (None, 50, 50)            1000000   \n",
       "_________________________________________________________________\n",
-      "lstm_2 (LSTM)                (None, 32)                10624     \n",
+      "LSTM (LSTM)                  (None, 32)                10624     \n",
       "_________________________________________________________________\n",
       "output (Dense)               (None, 2)                 66        \n",
       "=================================================================\n",
@@ -210,18 +218,18 @@
     }
    ],
    "source": [
-    "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
+    "p_input = Input(shape=(50, ), dtype='int32', name='Input_postText')\n",
     "\n",
-    "em = Embedding(input_dim=20000, output_dim=50, input_length=50)(p_input)\n",
+    "em = Embedding(input_dim=20000, output_dim=50, input_length=50, name='Embedding')(p_input)\n",
     "#d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32)(em)\n",
+    "lstm_out = LSTM(32, name='LSTM')(em)\n",
     "#d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "output = Dense(2, activation='softmax', name = 'output')(lstm_out)\n",
     "\n",
     "model = Model(inputs=p_input, outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
-    "plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model1.png')\n",
+    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model1.png')\n",
     "\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
