add model images

--- a/Model2.ipynb
+++ b/Model2.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -272,20 +272,20 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_postText (InputLayer)     (None, 50)           0                                            \n",
+      "Input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_2 (Embedding)         (None, 50, 50)       1000000     input_postText[0][0]             \n",
+      "Embedding (Embedding)           (None, 50, 50)       1000000     Input_postText[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "input_ids (InputLayer)          (None, 1)            0                                            \n",
+      "Input_ids (InputLayer)          (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_2 (LSTM)                   (None, 32)           10624       embedding_2[0][0]                \n",
+      "LSTM (LSTM)                     (None, 32)           10624       Embedding[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dence1 (Dense)                  (None, 16)           32          input_ids[0][0]                  \n",
+      "dence1 (Dense)                  (None, 16)           32          Input_ids[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 48)           0           lstm_2[0][0]                     \n",
+      "merge1 (Concatenate)            (None, 48)           0           LSTM[0][0]                       \n",
       "                                                                 dence1[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 16)           784         concatenate_2[0][0]              \n",
+      "dence (Dense)                   (None, 16)           784         merge1[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
       "output (Dense)                  (None, 2)            34          dence[0][0]                      \n",
       "==================================================================================================\n",
@@ -297,18 +297,18 @@
     }
    ],
    "source": [
-    "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
-    "i_input = Input(shape=(1, ), name='input_ids')\n",
+    "p_input = Input(shape=(50, ), dtype='int32', name='Input_postText')\n",
+    "i_input = Input(shape=(1, ), name='Input_ids')\n",
     "\n",
     "#テキストの学習\n",
-    "em = Embedding(input_dim=20000, output_dim=50, input_length=50)(p_input)\n",
+    "em = Embedding(input_dim=20000, output_dim=50, input_length=50, name='Embedding')(p_input)\n",
     "d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32)(d_em)\n",
+    "lstm_out = LSTM(32, name='LSTM')(d_em)\n",
     "d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "#2つ目のデータ学習\n",
     "i2 = Dense(16, activation='relu', name = 'dence1')(i_input)\n",
     "d_i2 = Dropout(0.5)(i2)\n",
-    "x = concatenate([d_lstm_out, d_i2])\n",
+    "x = concatenate([d_lstm_out, d_i2], name='merge1')\n",
     "\n",
     "m2 = Dense(16, activation='relu', name = 'dence')(x)\n",
     "d_m2 = Dropout(0.5)(m2)\n",
