--- a/Model3.ipynb
+++ b/Model3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -281,18 +281,18 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_postText (InputLayer)     (None, 50)           0                                            \n",
+      "Input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
       "Input_tag (InputLayer)          (None, 10)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_1 (Concatenate)     (None, 60)           0           input_postText[0][0]             \n",
+      "merge1 (Concatenate)            (None, 60)           0           Input_postText[0][0]             \n",
       "                                                                 Input_tag[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_1 (Embedding)         (None, 60, 60)       1200000     concatenate_1[0][0]              \n",
+      "Embedding (Embedding)           (None, 60, 60)       1200000     merge1[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_1 (LSTM)                   (None, 32)           11904       embedding_1[0][0]                \n",
+      "LSTM (LSTM)                     (None, 32)           11904       Embedding[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "output (Dense)                  (None, 2)            66          lstm_1[0][0]                     \n",
+      "output (Dense)                  (None, 2)            66          LSTM[0][0]                       \n",
       "==================================================================================================\n",
       "Total params: 1,211,970\n",
       "Trainable params: 1,211,970\n",
@@ -302,13 +302,13 @@
     }
    ],
    "source": [
-    "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
+    "p_input = Input(shape=(50, ), dtype='int32', name='Input_postText')\n",
     "t_input = Input(shape=(10, ), dtype='int32', name='Input_tag')\n",
     "\n",
-    "x = concatenate([p_input, t_input])\n",
-    "em = Embedding(input_dim=20000, output_dim=60, input_length=60)(x)\n",
+    "x = concatenate([p_input, t_input], name='merge1')\n",
+    "em = Embedding(input_dim=20000, output_dim=60, input_length=60, name='Embedding')(x)\n",
     "d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32)(d_em)\n",
+    "lstm_out = LSTM(32, name='LSTM')(d_em)\n",
     "d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "output = Dense(2, activation='softmax', name = 'output')(d_lstm_out)\n",
     "\n",
