--- a/Model6.ipynb
+++ b/Model6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -281,30 +281,30 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_postText (InputLayer)     (None, 50)           0                                            \n",
+      "Input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_1 (Embedding)         (None, 50, 50)       1000000     input_postText[0][0]             \n",
+      "Embedding (Embedding)           (None, 50, 50)       1000000     Input_postText[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "input_other1 (InputLayer)       (None, 1)            0                                            \n",
+      "Input_other1 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "input_other2 (InputLayer)       (None, 1)            0                                            \n",
+      "Input_other2 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "input_other3 (InputLayer)       (None, 1)            0                                            \n",
+      "Input_other3 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_1 (LSTM)                   (None, 32)           10624       embedding_1[0][0]                \n",
+      "LSTM (LSTM)                     (None, 32)           10624       Embedding[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dence1 (Dense)                  (None, 16)           32          input_other1[0][0]               \n",
+      "dence1 (Dense)                  (None, 16)           32          Input_other1[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "dence2 (Dense)                  (None, 16)           32          input_other2[0][0]               \n",
+      "dence2 (Dense)                  (None, 16)           32          Input_other2[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "dence3 (Dense)                  (None, 16)           32          input_other3[0][0]               \n",
+      "dence3 (Dense)                  (None, 16)           32          Input_other3[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_1 (Concatenate)     (None, 80)           0           lstm_1[0][0]                     \n",
+      "merge1 (Concatenate)            (None, 80)           0           LSTM[0][0]                       \n",
       "                                                                 dence1[0][0]                     \n",
       "                                                                 dence2[0][0]                     \n",
       "                                                                 dence3[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 16)           1296        concatenate_1[0][0]              \n",
+      "dence (Dense)                   (None, 16)           1296        merge1[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
       "output (Dense)                  (None, 2)            34          dence[0][0]                      \n",
       "==================================================================================================\n",
@@ -316,15 +316,15 @@
     }
    ],
    "source": [
-    "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
-    "o1_input = Input(shape=(1, ), name='input_other1')\n",
-    "o2_input = Input(shape=(1,), name='input_other2')\n",
-    "o3_input = Input(shape=(1,), name='input_other3')\n",
+    "p_input = Input(shape=(50, ), dtype='int32', name='Input_postText')\n",
+    "o1_input = Input(shape=(1, ), name='Input_other1')\n",
+    "o2_input = Input(shape=(1,), name='Input_other2')\n",
+    "o3_input = Input(shape=(1,), name='Input_other3')\n",
     "\n",
     "#テキストの学習\n",
-    "em = Embedding(input_dim=20000, output_dim=50, input_length=50)(p_input)\n",
+    "em = Embedding(input_dim=20000, output_dim=50, input_length=50, name='Embedding')(p_input)\n",
     "d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32)(d_em)\n",
+    "lstm_out = LSTM(32, name='LSTM')(d_em)\n",
     "d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "#2つ目の入力\n",
     "i2 = Dense(16, activation='relu', name = 'dence1')(o1_input)\n",
@@ -336,7 +336,7 @@
     "i4 = Dense(16, activation='relu', name = 'dence3')(o3_input)\n",
     "d_i4 = Dropout(0.5)(i4)\n",
     "\n",
-    "x = concatenate([d_lstm_out, d_i2, d_i3, d_i4])\n",
+    "x = concatenate([d_lstm_out, d_i2, d_i3, d_i4], name='merge1')\n",
     "\n",
     "m2 = Dense(16, activation='relu', name = 'dence')(x)\n",
     "d_m2 = Dropout(0.5)(m2)\n",
