--- a/Model4.ipynb
+++ b/Model4.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -280,25 +280,25 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_postText (InputLayer)     (None, 50)           0                                            \n",
+      "Input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_2 (Embedding)         (None, 50, 50)       1000000     input_postText[0][0]             \n",
+      "Embedding (Embedding)           (None, 50, 50)       1000000     Input_postText[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "input_other1 (InputLayer)       (None, 1)            0                                            \n",
+      "Input_other1 (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "input_other2 (InputLayer)       (None, 2)            0                                            \n",
+      "Input_other2 (InputLayer)       (None, 2)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_2 (LSTM)                   (None, 32)           10624       embedding_2[0][0]                \n",
+      "LSTM (LSTM)                     (None, 32)           10624       Embedding[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dence1 (Dense)                  (None, 16)           32          input_other1[0][0]               \n",
+      "dence1 (Dense)                  (None, 16)           32          Input_other1[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "dence2 (Dense)                  (None, 16)           48          input_other2[0][0]               \n",
+      "dence2 (Dense)                  (None, 16)           48          Input_other2[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 64)           0           lstm_2[0][0]                     \n",
+      "merge1 (Concatenate)            (None, 64)           0           LSTM[0][0]                       \n",
       "                                                                 dence1[0][0]                     \n",
       "                                                                 dence2[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 16)           1040        concatenate_2[0][0]              \n",
+      "dence (Dense)                   (None, 16)           1040        merge1[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
       "output (Dense)                  (None, 2)            34          dence[0][0]                      \n",
       "==================================================================================================\n",
@@ -310,14 +310,14 @@
     }
    ],
    "source": [
-    "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
-    "o1_input = Input(shape=(1, ), name='input_other1')\n",
-    "o2_input = Input(shape=(2,), name='input_other2')\n",
+    "p_input = Input(shape=(50, ), dtype='int32', name='Input_postText')\n",
+    "o1_input = Input(shape=(1, ), name='Input_other1')\n",
+    "o2_input = Input(shape=(2,), name='Input_other2')\n",
     "\n",
     "#テキストの学習\n",
-    "em = Embedding(input_dim=20000, output_dim=50, input_length=50)(p_input)\n",
+    "em = Embedding(input_dim=20000, output_dim=50, input_length=50, name='Embedding')(p_input)\n",
     "d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32)(d_em)\n",
+    "lstm_out = LSTM(32, name='LSTM')(d_em)\n",
     "d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "#2つ目の入力\n",
     "i2 = Dense(16, activation='relu', name = 'dence1')(o1_input)\n",
@@ -326,7 +326,7 @@
     "i3 = Dense(16, activation='relu', name = 'dence2')(o2_input)\n",
     "d_i3 = Dropout(0.5)(i3)\n",
     "\n",
-    "x = concatenate([d_lstm_out, d_i2, d_i3])\n",
+    "x = concatenate([d_lstm_out, d_i2, d_i3], name='merge1')\n",
     "\n",
     "m2 = Dense(16, activation='relu', name = 'dence')(x)\n",
     "d_m2 = Dropout(0.5)(m2)\n",
@@ -335,7 +335,7 @@
     "model = Model(inputs=[p_input, o1_input, o2_input], outputs = output)\n",
     "model.compile(optimizer='Adam', loss='categorical_crossentropy',  metrics=['acc', macro_precision, macro_recall, macro_f_measure])\n",
     "model.summary()\n",
-    "plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model4.png')\n",
+    "#plot_model(model, show_shapes=True, show_layer_names=True, to_file='model_image/model4.png')\n",
     "\n",
     "\n",
     "early_stopping = EarlyStopping(patience=0, verbose=1)"
