--- a/Model5.ipynb
+++ b/Model5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -285,25 +285,25 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_postText (InputLayer)     (None, 50)           0                                            \n",
+      "Input_postText (InputLayer)     (None, 50)           0                                            \n",
       "__________________________________________________________________________________________________\n",
       "Input_tag (InputLayer)          (None, 10)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_1 (Concatenate)     (None, 60)           0           input_postText[0][0]             \n",
+      "merge1 (Concatenate)            (None, 60)           0           Input_postText[0][0]             \n",
       "                                                                 Input_tag[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "embedding_1 (Embedding)         (None, 60, 60)       1200000     concatenate_1[0][0]              \n",
+      "Embedding (Embedding)           (None, 60, 60)       1200000     merge1[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "input_others (InputLayer)       (None, 1)            0                                            \n",
+      "Input_others (InputLayer)       (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "lstm_1 (LSTM)                   (None, 32)           11904       embedding_1[0][0]                \n",
+      "LSTM (LSTM)                     (None, 32)           11904       Embedding[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dence1 (Dense)                  (None, 16)           32          input_others[0][0]               \n",
+      "dence1 (Dense)                  (None, 16)           32          Input_others[0][0]               \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 48)           0           lstm_1[0][0]                     \n",
+      "merge2 (Concatenate)            (None, 48)           0           LSTM[0][0]                       \n",
       "                                                                 dence1[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "dence (Dense)                   (None, 16)           784         concatenate_2[0][0]              \n",
+      "dence (Dense)                   (None, 16)           784         merge2[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
       "output (Dense)                  (None, 2)            34          dence[0][0]                      \n",
       "==================================================================================================\n",
@@ -315,22 +315,22 @@
     }
    ],
    "source": [
-    "p_input = Input(shape=(50, ), dtype='int32', name='input_postText')\n",
+    "p_input = Input(shape=(50, ), dtype='int32', name='Input_postText')\n",
     "t_input = Input(shape=(10, ), dtype='int32', name='Input_tag')\n",
-    "o_input = Input(shape=(1,), name='input_others')\n",
+    "o_input = Input(shape=(1,), name='Input_others')\n",
     "\n",
     "#テキストとタグの学習\n",
-    "x = concatenate([p_input, t_input])\n",
-    "em = Embedding(input_dim=20000, output_dim=60, input_length=60)(x)\n",
+    "x = concatenate([p_input, t_input], name='merge1')\n",
+    "em = Embedding(input_dim=20000, output_dim=60, input_length=60, name='Embedding')(x)\n",
     "#d_em = Dropout(0.5)(em)\n",
-    "lstm_out = LSTM(32)(em)\n",
+    "lstm_out = LSTM(32, name='LSTM')(em)\n",
     "#d_lstm_out = Dropout(0.5)(lstm_out)\n",
     "\n",
     "#3つ目のデータ学習\n",
     "i3 = Dense(16, activation='relu', name='dence1')(o_input)\n",
     "#d_i3 = Dropout(0.5)(i3)\n",
     "\n",
-    "x2 = concatenate([lstm_out, i3])\n",
+    "x2 = concatenate([lstm_out, i3], name='merge2')\n",
     "m2 = Dense(16, activation='relu', name = 'dence')(x2)\n",
     "#d_m2 = Dropout(0.5)(m2)\n",
     "output = Dense(2, activation='softmax', name = 'output')(m2)\n",
